--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /~$e361f21_hw2.docx
 /~WRL0005.tmp
 /ece361f21_hw2.docx
+Project1/.vs/Project1/v16/Browse.VC.opendb
+Project1/.vs/Project1/v16/Browse.VC.db-shm
